[tool.poetry]
name = "ci-benchmark"
version = "0.1.0"
description = ""
authors = ["leoecrepont <leo.ecrepont@mergify.com>"]
readme = "README.md"
packages = [{include = "ci_benchmark"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
